@@ -1,3 +1,8 @@
+2002-11-09  Scott Dattalo <scott@dattalo.com>
+  * Invalid relative branches for 18xxx family were not generating errors. 
+    eg: bc $+258, bc $-256, rcall $-2048, rcall $+2050 all now generate 
+    appropriate errors.
+
 2002-11-07 Craig Franklin <craigfranklin@attbi.com>
   * Added support for sx, 17xx, and 18xx devices in gpdasm.
   * Fixed config directive for 18xx devices with address > 0x300007
